--- a/templates/register.html
+++ b/templates/register.html
@@ -133,7 +133,9 @@
             <button type="button" class="button-name" onclick="prevStep()">
               Voltar
             </button>
-            <button type="submit" class="button-name">Criar Conta</button>
+            <button type="button" class="button-name" onclick="validarPasso(3)">
+              Criar Conta
+            </button>
           </div>
         </div>
       </form>
@@ -232,10 +234,15 @@
             .forEach((el) => (el.innerHTML = ""));
 
           if (data.success) {
-            // Se a validação for um sucesso, avança para o próximo passo
-            if (currentStep < steps.length - 1) {
-              currentStep++;
-              showStep(currentStep);
+            if (passo === 3) {
+              // Se for o último passo, submete o formulário de verdade
+              document.getElementById("registerForm").submit();
+            } else {
+              // Se a validação for um sucesso, avança para o próximo passo
+              if (currentStep < steps.length - 1) {
+                currentStep++;
+                showStep(currentStep);
+              }
             }
           } else {
             // Se houver erros, exibe-os nos containers corretos
