--- a/templates/register.html
+++ b/templates/register.html
@@ -60,14 +60,7 @@
               oninput="validarApelido(this)"
             />
 
-            <div
-              style="
-                margin-top: 8px;
-                display: flex;
-                align-items: center;
-                gap: 5px;
-              "
-            >
+            <div class="checkbox-container">
               <input
                 type="checkbox"
                 id="apelidoPadraoCheckbox"
