CSS e HTML: Nova Checkbox

--- a/templates/register.html
+++ b/templates/register.html
@@ -60,14 +60,15 @@
               oninput="validarApelido(this)"
             />
 
-            <div class="checkbox-container">
+            <label class="checkbox-wrapper">
               <input
                 type="checkbox"
                 id="apelidoPadraoCheckbox"
                 onchange="alternarApelidoPadrao()"
               />
-              <label for="apelidoPadraoCheckbox">Definir apelido padrão</label>
-            </div>
+              <div class="checkmark"></div>
+              Definir apelido padrão
+            </label>
           </div>
           <div class="erros-container" id="erros-apelido"></div>
 
