Ajuste na frase: Deinfir apelido padrão

--- a/static/style.css
+++ b/static/style.css
@@ -932,6 +932,7 @@ button:active {
   -webkit-tap-highlight-color: transparent;
   user-select: none;
   font-weight: normal;
+  font-size: 1.3em;
 }
 
 .checkbox-wrapper input {
