--- a/templates/register.html
+++ b/templates/register.html
@@ -67,7 +67,7 @@
                 onchange="alternarApelidoPadrao()"
               />
               <div class="checkmark"></div>
-              Definir apelido padrão
+              Definir apelido padrão e Anônimo.
             </label>
           </div>
           <div class="erros-container" id="erros-apelido"></div>
