Style: Aplicando cor branca no apelido

--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,13 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <style>
+      .step input:disabled {
+        color: #fff;
+        opacity: 1;
+        -webkit-text-fill-color: #fff;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
