Add - Sair da conta no perfil_config

--- a/templates/perfil_config.html
+++ b/templates/perfil_config.html
@@ -11,5 +11,12 @@
   </head>
   <body>
     Bem vindos as configurações.
+    <a
+      href="{{ url_for('logout') }}"
+      onclick="return
+confirmarLogout()"
+      class="btn-sair"
+      >Sair</a
+    >
   </body>
 </html>
