Opiniões do Usuario com estilo

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -38,8 +38,8 @@
       </div>
 
       <hr />
-
-      <h2>Opiniões do Usuário:</h2>
+      
+      <h2 class="titulo-opinioes">Opiniões do Usuário:</h2>
 
       {% if posts %} {% for item in posts %} {% set post = item['post'] %} {%
       set tempo = item['tempo'] %} {% set likes_count = item['likes_count'] %}
