--- a/static/style.css
+++ b/static/style.css
@@ -1040,6 +1040,12 @@ button:active {
 .perfil-info p:last-of-type {
   margin-bottom: 0;
 }
+/*Fim - caixinha de info do perfil*/
+
+.titulo-opinioes {
+  text-align: center;
+  color: white;
+}
 
 @media (max-width: 600px) {
   .container {
