Add - Rota para terms.html

--- a/templates/perfil_config.html
+++ b/templates/perfil_config.html
@@ -29,6 +29,8 @@
 
     <hr />
 
+    <a href="{{ url_for('terms') }}">Termos e Diretrizes</a>
+
     <a
       href="{{ url_for('logout') }}"
       onclick="return confirmarLogout()"
