--- a/templates/terms.html
+++ b/templates/terms.html
@@ -41,7 +41,7 @@
         margin-bottom: 15px;
       }
       .highlight {
-        color: #ff5e5e;
+        color: #ff0000;
         font-weight: bold;
       }
     </style>
