AJUSTE - Novo termo

--- a/templates/terms.html
+++ b/templates/terms.html
@@ -13,7 +13,7 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px 30px;
-        background: #111111;
+        background: #000000;
         color: #e0e0e0;
         border-radius: 10px;
         line-height: 1.6;
@@ -136,13 +136,18 @@
         <li>
           O Opinion pode remover conteúdo que viole estes Termos ou a lei.
         </li>
-        <li>
+        <li class="highlight">
           O Opinion não se responsabiliza por opiniões de usuários, sendo cada
           um responsável pelo que publica.
         </li>
         <li>
           Os Termos podem ser atualizados a qualquer momento, sendo
           responsabilidade do usuário consultá-los periodicamente.
+        </li>
+        <li class="highlight">
+          Em casos juridicos, o Opinion tem total responsabilidade de fornecer
+          os dados necessarios ao orgãos responsaveis, mesmo os quais sejam
+          dados pessoais do usuario, como: Nome, email.
         </li>
       </ul>
 
