MOD - Button de diretrizes

--- a/templates/perfil_config.html
+++ b/templates/perfil_config.html
@@ -29,7 +29,7 @@
 
     <hr />
 
-    <a href="{{ url_for('terms') }}">Termos e Diretrizes</a>
+    <button href="{{ url_for('terms') }}">Termos e Diretrizes</button>
 
     <a
       href="{{ url_for('logout') }}"
