--- a/static/style.css
+++ b/static/style.css
@@ -755,7 +755,7 @@ button:active {
 }
 
 .button-name:active {
-  box-shadow: #000000 0 3px 7px inset;
+  box-shadow: #ff3a3a 0 3px 7px inset;
   transform: translateY(2px);
 }
 
