--- a/templates/trending.html
+++ b/templates/trending.html
@@ -71,7 +71,7 @@
           <img
             src="{{ url_for('static', filename='images/trending.PNG') }}"
             alt="Trending"
-            class="icone"
+            class="icone bubble-img"
           />
         </a>
         <a href="{{ url_for('groups') }}">
