--- a/templates/feed.html
+++ b/templates/feed.html
@@ -152,7 +152,7 @@
           <img
             src="{{ url_for('static', filename='images/12.png') }}"
             alt="Trending"
-            class="icone"
+            class="icone bubble-img"
           />
         </a>
         <a href="{{ url_for('groups') }}">
