Img trending atualizada

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -150,7 +150,7 @@
         </a>
         <a href="{{ url_for('trending') }}">
           <img
-            src="{{ url_for('static', filename='images/12.png') }}"
+            src="{{ url_for('static', filename='images/trending.png') }}"
             alt="Trending"
             class="icone bubble-img"
           />
