--- a/templates/groups.html
+++ b/templates/groups.html
@@ -50,9 +50,9 @@
 
         <a href="{{ url_for('trending') }}">
           <img
-            src="{{ url_for('static', filename='images/12.png') }}"
+            src="{{ url_for('static', filename='images/trending.png') }}"
             alt="Trending"
-            class="icone"
+            class="icone bubble-img"
           />
         </a>
         <a href="{{ url_for('groups') }}">
