--- a/templates/trending.html
+++ b/templates/trending.html
@@ -69,7 +69,7 @@
         </a>
         <a href="{{ url_for('trending') }}">
           <img
-            src="{{ url_for('static', filename='images/trending.PNG') }}"
+            src="{{ url_for('static', filename='images/trending.png') }}"
             alt="Trending"
             class="icone bubble-img"
           />
