--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -136,9 +136,9 @@
 
         <a href="{{ url_for('trending') }}">
           <img
-            src="{{ url_for('static', filename='images/trending.PNG') }}"
+            src="{{ url_for('static', filename='images/trending.png') }}"
             alt="Trending"
-            class="icone"
+            class="icone bubble-img"
           />
         </a>
         <a href="{{ url_for('groups') }}">
