--- a/templates/trending.html
+++ b/templates/trending.html
@@ -20,7 +20,7 @@
         font-size: 1.2em;
       "
     >
-      <img src="static/images/12.png" alt="Ícone" class="bubble-img" />
+      <img src="static/images/trending.PNG" alt="Ícone" class="bubble-img" />
       Opiniões mais virais:
     </h3>
 
